# dramatis_personae

./: .coverage  .dockerignore  .gitignore  .~lock.dramatis_personae.xls#  .~lock.dramatis_personae.xlsx#  .~lock.dramatis_personae_update.xlsx#  8088  =2.2  =2021.3  Dockerfile  Pipfile  README.md  celerybeat-schedule  config.orig.yml  config.yml  coverage.xml  db.sqlite3  db.xml  docker-compose.yml  dramatis_personae.xls  dramatis_personae.xlsx  dramatis_personae.xlsx.bak  dramatis_personae_update.xlsx  dump.sh  fics7.sublime-workspace  initdb.sh  manage.py  my-chronyhelper.pp  my-chronyhelper.te  my-logrotate.pp  my-logrotate.te  my-unboundanchor.pp  my-unboundanchor.te  pycheck.sh  pyproject.toml  requirements.txt  requirements2.txt  requirementsdev.txt  run.sh  sonar-project.properties  (+3 more)
.sass-cache/3347c962b0d87497c4b0b68e6bf9229399f891de/: styles.scssc
.sass-cache/76de45567d6e882b520cdbddc43ad621fc4b43bc/: styles.scssc
.scannerwork/: report-task.txt
ansible/: deploy_on_pi.yml  eoleos.md  hosts  memo.md
ansible/templates/: ifcfg-eht0  sudoers.j2
backup/: acts.xml  armorrefs.xml  armors.xml  beneficeafflictions.xml  blank_epics.xml  blessingcurses.xml  casteverymans.xml  castprofiles.xml  castroles.xml  characters.xml  configs.xml  db.xml  db20181208.json  db20181210.json  db20181211.json  db20190218.json  dramas.xml  epics.xml  events.xml  shields.xml  skillrefs.xml  skillrefs.yml  skills.xml  talents.xml  weaponrefs.xml  weaponrefs.yml  weapons.xml
backup/custom/: act.xml  armor.xml  armor_custo.xml  benefice_affliction.xml  benefice_affliction_custo.xml  benefice_afflictions.xml  blessing_curse.xml  blessing_curse_custo.xml  bloke.xml  campaign.xml  character.xml  character_custo.xml  config.xml  cyberware_ref.xml  drama.xml  epic.xml  event.xml  group.xml  investigator.xml  orbital_item.xml  profile.xml  rpg_system.xml  shield.xml  (+9 more)
cartograph/: admin.py  apps.py  urls.py
collector/: admin.py  apps.py  consumers.py  context_processors.py  flexbox.html  forms.py  fs_fics7.py  makedp.py  mixins.py  models.py  routing.py  tasks.py  urls.py  utils.py  views.py  xls_collector.py
deployement/: deploy_prod.sh
doc/: fs_fics7.html
docker/: Dockerfile.dp  docker-compose.yaml  entrypoint.sh
dramatis_personae/: asgi.py  celery.py  db.sqlite3  routing.py  urls.py  wsgi.py  wsgi.py.rescue
dramatis_personae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fics7/: db.sqlite3  settings.py  urls.py  wsgi.py
optimizer/: admin.py  urls.py  views.py
requirements/: common.txt  dev.txt  dev_gal.txt  last.txt  local_prod.txt  old_dev.txt  poc.txt  prod.txt  raspipoc.txt  raw.txt
scenarist/: admin.py  apps.py  shortcuts.py  tests.py  urls.py  widget.py
scripts/: celerybeat-schedule  check_tod.py  db_dump.sh  db_load_blank.sh  db_load_custom.sh  db_load_initial.sh  db_respawn.sh  db_restore.sh  deploy.sh  devnotes.md  dp_finder.py  dp_save_images.py  dp_showepics.py  dp_skillslist.py  entrypoint.sh  fix_images.py  json_cleanup.py  new_toto.json  pc_deploy.sh  prepare_server.sh  quizzfix.py  quizzshow.py  raspberry_deploy.sh  respawn_dbmig.sh  run.sh  s2n_update.py  skillscheck.py  test.sh  tod_check.py  tod_race.py  toto.json  update_alliances.py  update_doc.sh  update_lores.py  update_schemes.py  update_stories_count.py  worker.sh
zapp/: apps.py
(+2048 files in other folders)
